[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sports-control-plane"
version = "0.1.0"
description = "API surface for orchestrating sports modeling operations."
authors = [{ name = "Bryan" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
select = ["E", "F", "I"]
line-length = 120
